open-policy-agent/gatekeeper/require-nodeselector/deployment-valid.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-valid
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
      nodeSelector:
        node: test
