open-policy-agent/gatekeeper/require-nodeselector/require-nodeselector-constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: requirenodeselectors
spec:
  crd:
    spec:
      names:
        kind: RequireNodeSelectors
        listKind: RequireNodeSelectorsList
        plural: requirenodeselectors
        singular: requirenodeselector

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package requirenodeselectors

        violation[{"msg": msg, "details": {"missing_prefix": "nodeSelector"}}] {
          hasNodeSelector
          msg := sprintf("you must provide nodeSelector: %v", ["test"])
        }

        hasNodeSelector {
          input.review.object.spec.template.spec.nodeSelector
          count(input.review.object.spec.template.spec.nodeSelector) > 0
        }

        violation[{"msg": msg, "details": {"missing_prefix": "nodeSelector"}}] {
          not input.review.object.spec.template.spec.nodeSelector
          msg := sprintf("you must provide nodeSelector: %v", ["test"])
        }
